Bug 80463 - [SNB Regression]igt/pm_rpm subcases cause WARNs
Summary: [SNB Regression]igt/pm_rpm subcases cause WARNs
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: Other All
: high normal
Assignee: Paulo Zanoni
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
: 80464 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-06-24 09:09 UTC by Guo Jinxian
Modified: 2017-10-06 14:37 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
dmesg (126.27 KB, text/plain)
2014-06-24 09:09 UTC, Guo Jinxian
no flags Details
take power well ref around mode set (1.29 KB, patch)
2014-06-26 18:37 UTC, Jesse Barnes
no flags Details | Splinter Review
Possible fix (5.51 KB, patch)
2014-07-02 21:24 UTC, Paulo Zanoni
no flags Details | Splinter Review
dmesg (125.79 KB, text/plain)
2014-07-07 03:37 UTC, Guo Jinxian
no flags Details
Correct patch (8.40 KB, patch)
2014-07-09 20:12 UTC, Paulo Zanoni
no flags Details | Splinter Review

Description Guo Jinxian 2014-06-24 09:09:51 UTC
Created attachment 101656 [details]
dmesg

==System Environment==
--------------------------
Regression: Yes. 
The fail rate is about 1 out of 3
I unable to find good commit

Non-working platforms: SNB

==kernel==
--------------------------
origin/drm-intel-nightly: 794975a476b0b5e16d04ed1e5d082b9e2b54b4fb(fails)
    drm-intel-nightly: 2014y-06m-23d-10h-38m-48s integration manifest
origin/drm-intel-next-queued: 9c33baa6b3bbb01c1a88dceba986b20e6642cf31(fails)
    drivers/i915: Fix unnoticed failure of init_ring_common()    
origin/drm-intel-fixes: bfafe93a1cd466ef318b7e5f6c65f59aee147791(fails)
    drm/i915: cache hw power well enabled state

==Bug detailed description==
-----------------------------
igt/pm_rpm subcases causes " WARNING: CPU: 1 PID: 3789 at drivers/gpu/drm/i915/intel_display.c:10259 intel_modeset_check_state+0x3c6/0x56f [i915]()" sporadically 

Case list:
igt/pm_rpm/modeset-non-lpsp-stress
igt/pm_rpm/modeset-non-lpsp-stress-no-wait
igt/pm_rpm/modeset-stress-extra-wait
igt/pm_rpm/pci-d3-state
igt/pm_rpm/reg-read-ioctl
igt/pm_rpm/rte
igt/pm_rpm/sysfs-read
igt/pm_rpm/system-suspend

Output:
[root@x-sgb4 tests]# ./pm_rpm --run-subtest modeset-non-lpsp-stress-no-wait
IGT-Version: 1.7-gfedb9b6 (i686) (Linux: 3.16.0-rc2_drm-intel-nightly_794975_20140624+ i686)
Runtime PM support: 1
PC8 residency support: 0
Subtest modeset-non-lpsp-stress-no-wait: SUCCESS

Dmesg shows:
[  896.423994] WARNING: CPU: 1 PID: 3789 at drivers/gpu/drm/i915/intel_display.c:10259 intel_modeset_check_state+0x3c6/0x56f [i915]()
[  896.423995] pll on state mismatch (expected 0, found 1)
[  896.423995] Modules linked in: dm_mod snd_hda_codec_hdmi snd_hda_codec_realtek snd_hda_codec_generic iTCO_wdt iTCO_vendor_support ppdev dcdbas snd_hda_intel snd_hda_controller serio_raw pcspkr snd_hda_codec i2c_i801 snd_hwdep snd_pcm snd_timer lpc_ich mfd_core snd soundcore tpm_tis parport_pc tpm parport acpi_cpufreq i915 video button drm_kms_helper drm
[  896.424006] CPU: 1 PID: 3789 Comm: pm_rpm Tainted: G        W     3.15.0-rc8_drm-intel-next-queued_868d66_20140616+ #3598
[  896.424007] Hardware name: Dell Inc. OptiPlex 990/0DXWW6, BIOS A02 02/26/2011
[  896.424008]  00000000 c16e6f4d f213dd64 c102e6c8 f81f0e46 f4ff43b8 f4c61000 00000001
[  896.424010]  f4ff43b0 c102e743 00000009 f213dd64 f822f25c f213dd7c f81f0e46 f822ca3c
[  896.424013]  00002813 f822f25c 00000000 00000001 f21a9600 f213dda4 00000000 f4c611e4
[  896.424016] Call Trace:
[  896.424017]  [<c16e6f4d>] ? dump_stack+0x3e/0x4e
[  896.424018]  [<c102e6c8>] ? warn_slowpath_common+0x65/0x78
[  896.424026]  [<f81f0e46>] ? intel_modeset_check_state+0x3c6/0x56f [i915]
[  896.424027]  [<c102e743>] ? warn_slowpath_fmt+0x29/0x2d
[  896.424035]  [<f81f0e46>] ? intel_modeset_check_state+0x3c6/0x56f [i915]
[  896.424037]  [<c16e4453>] ? printk+0x16/0x1a
[  896.424044]  [<f81f100f>] ? intel_set_mode+0x20/0x25 [i915]
[  896.424052]  [<f81f1a8f>] ? intel_crtc_set_config+0x62f/0x92c [i915]
[  896.424055]  [<f809aefe>] ? drm_mode_setplane+0x136/0x136 [drm]
[  896.424059]  [<f809aefe>] ? drm_mode_setplane+0x136/0x136 [drm]
[  896.424063]  [<f8098267>] ? drm_mode_set_config_internal+0x39/0x8a [drm]
[  896.424067]  [<f809aefe>] ? drm_mode_setplane+0x136/0x136 [drm]
[  896.424070]  [<f809b271>] ? drm_mode_setcrtc+0x373/0x405 [drm]
[  896.424074]  [<f809aefe>] ? drm_mode_setplane+0x136/0x136 [drm]
[  896.424077]  [<f80908cf>] ? drm_ioctl+0x22e/0x35f [drm]
[  896.424081]  [<f809aefe>] ? drm_mode_setplane+0x136/0x136 [drm]
[  896.424083]  [<c104539f>] ? hrtimer_try_to_cancel+0x83/0x8a
[  896.424086]  [<f80906a1>] ? drm_copy_field+0x47/0x47 [drm]
[  896.424088]  [<c10e5335>] ? do_vfs_ioctl+0x3fa/0x444
[  896.424090]  [<c1045f63>] ? hrtimer_nanosleep+0x73/0xf3
[  896.424092]  [<c1044f45>] ? update_rmtp+0x5e/0x5e
[  896.424093]  [<c10e53c1>] ? SyS_ioctl+0x42/0x6d
[  896.424095]  [<c16f154c>] ? sysenter_do_call+0x12/0x22
[  896.424096] ---[ end trace 4bbbd6eefcf269f6 ]---


==Reproduce steps==
---------------------------- 
1.  ./pm_rpm --run-subtest modeset-non-lpsp-stress-no-wait
Comment 1 Jesse Barnes 2014-06-26 18:37:39 UTC
Created attachment 101820 [details] [review]
take power well ref around mode set

One way of fixing it at least.
Comment 2 Jesse Barnes 2014-06-26 18:45:19 UTC
Paulo says we should probably wrap the checker functions with power domain refs instead.  Assigning to him.
Comment 3 Paulo Zanoni 2014-07-02 21:24:42 UTC
Created attachment 102162 [details] [review]
Possible fix

Can you please apply this patch and retest?
Comment 4 Guo Jinxian 2014-07-03 03:05:56 UTC
(In reply to comment #3)
> Created attachment 102162 [details] [review] [review]
> Possible fix
> 
> Can you please apply this patch and retest?

The Calltrace unable to reproduce with this patch. but the test was skipped.

Output:
[root@x-sgb3 tests]# ./pm_rpm --run-subtest modeset-non-lpsp-stress-no-wait
IGT-Version: 1.7-g67e29a3 (x86_64) (Linux: 3.15.0-rc8_kcloud_152811_20140703+ x86_64)
Runtime PM support: 1
PC8 residency support: 0
Test requirement not met in function modeset_subtest, file pm_rpm.c:764:
Last errno: 2, No such file or directory
Test requirement: (!(enable_one_screen_with_type(&ms_data, type)))
Subtest modeset-non-lpsp-stress-no-wait: SKIP
[root@x-sgb3 tests]# dmesg|grep Call
Comment 5 Paulo Zanoni 2014-07-03 13:10:43 UTC
(In reply to comment #4)
> (In reply to comment #3)
> > Created attachment 102162 [details] [review] [review] [review]
> > Possible fix
> > 
> > Can you please apply this patch and retest?
> 
> The Calltrace unable to reproduce with this patch. but the test was skipped.
> 
> Output:
> [root@x-sgb3 tests]# ./pm_rpm --run-subtest modeset-non-lpsp-stress-no-wait
> IGT-Version: 1.7-g67e29a3 (x86_64) (Linux:
> 3.15.0-rc8_kcloud_152811_20140703+ x86_64)
> Runtime PM support: 1
> PC8 residency support: 0
> Test requirement not met in function modeset_subtest, file pm_rpm.c:764:
> Last errno: 2, No such file or directory
> Test requirement: (!(enable_one_screen_with_type(&ms_data, type)))
> Subtest modeset-non-lpsp-stress-no-wait: SKIP
> [root@x-sgb3 tests]# dmesg|grep Call

Did you make sure you redid the test with the same outputs connected? Which outputs are you using?

I can't imagine why this test would start skipping without a change on the machine.
Comment 6 Paulo Zanoni 2014-07-03 15:11:21 UTC
*** Bug 80464 has been marked as a duplicate of this bug. ***
Comment 7 Paulo Zanoni 2014-07-03 15:11:47 UTC
*** Bug 80465 has been marked as a duplicate of this bug. ***
Comment 8 Guo Jinxian 2014-07-07 03:37:52 UTC
Created attachment 102343 [details]
dmesg

(In reply to comment #5)
> (In reply to comment #4)
> > (In reply to comment #3)
> > > Created attachment 102162 [details] [review] [review] [review] [review]
> > > Possible fix
> > > 
> > > Can you please apply this patch and retest?
> > 
> > The Calltrace unable to reproduce with this patch. but the test was skipped.
> > 
> > Output:
> > [root@x-sgb3 tests]# ./pm_rpm --run-subtest modeset-non-lpsp-stress-no-wait
> > IGT-Version: 1.7-g67e29a3 (x86_64) (Linux:
> > 3.15.0-rc8_kcloud_152811_20140703+ x86_64)
> > Runtime PM support: 1
> > PC8 residency support: 0
> > Test requirement not met in function modeset_subtest, file pm_rpm.c:764:
> > Last errno: 2, No such file or directory
> > Test requirement: (!(enable_one_screen_with_type(&ms_data, type)))
> > Subtest modeset-non-lpsp-stress-no-wait: SKIP
> > [root@x-sgb3 tests]# dmesg|grep Call
> 
> Did you make sure you redid the test with the same outputs connected? Which
> outputs are you using?
> 
> I can't imagine why this test would start skipping without a change on the
> machine.
Tested on the same device. This bug still able to reproduce with the patch.

[  174.851300] ------------[ cut here ]------------
[  174.851308] WARNING: CPU: 0 PID: 3854 at drivers/gpu/drm/i915/intel_display.c:5027 intel_modeset_check_state+0x7d/0x52d [i915]()
[  174.851309] wrong connector dpms state
[  174.851310] Modules linked in: dm_mod joydev snd_hda_codec_hdmi snd_hda_codec_realtek snd_hda_codec_generic iTCO_wdt iTCO_vendor_support ppdev dcdbas serio_raw pcspkr i2c_i801 snd_hda_intel snd_hda_controller snd_hda_codec snd_hwdep snd_pcm lpc_ich snd_timer mfd_core snd soundcore parport_pc parport tpm_tis tpm acpi_cpufreq i915 video button drm_kms_helper drm
[  174.851321] CPU: 0 PID: 3854 Comm: pm_rpm Tainted: G        W     3.15.0-rc8_kcloud_c63bb6_20140707+ #132
[  174.851322] Hardware name: Dell Inc. OptiPlex 990/0DXWW6, BIOS A02 02/26/2011
[  174.851323]  00000000 f24d7d80 c1699f5c f24d7d90 c102cfd4 f81deecb 00000009 f5a3bc00
[  174.851325]  f4d73800 f532b6c0 f24d7d98 c102d010 00000009 f24d7d90 f821c94e f24d7dac
[  174.851328]  f24d7ddc f81deecb f821a32a 000013a3 f821c94e c2800000 00000000 f4d73a00
[  174.851331] Call Trace:
[  174.851333]  [<c1699f5c>] ? dump_stack+0x3e/0x4e
[  174.851335]  [<c102cfd4>] ? warn_slowpath_common+0x64/0x7a
[  174.851343]  [<f81deecb>] ? intel_modeset_check_state+0x7d/0x52d [i915]
[  174.851345]  [<c102d010>] ? warn_slowpath_fmt+0x26/0x2a
[  174.851352]  [<f81deecb>] ? intel_modeset_check_state+0x7d/0x52d [i915]
[  174.851360]  [<f81df3e1>] ? intel_set_mode+0x21/0x2a [i915]
[  174.851368]  [<f81dfedb>] ? intel_crtc_set_config+0x6b4/0x934 [i915]
[  174.851369]  [<c1697480>] ? printk+0x17/0x1c
[  174.851374]  [<f8096826>] ? drm_mode_set_config_internal+0x39/0x8a [drm]
[  174.851379]  [<f809934d>] ? drm_mode_setcrtc+0x31b/0x3fe [drm]
[  174.851382]  [<f8099032>] ? drm_mode_setplane+0x13b/0x13b [drm]
[  174.851386]  [<f808ea98>] ? drm_ioctl+0x38f/0x40a [drm]
[  174.851389]  [<f8099032>] ? drm_mode_setplane+0x13b/0x13b [drm]
[  174.851391]  [<c10644c4>] ? ktime_get+0x58/0xc8
[  174.851395]  [<f808e709>] ? drm_copy_field+0x47/0x47 [drm]
[  174.851397]  [<c10c7eef>] ? do_vfs_ioctl+0x35f/0x40f
[  174.851398]  [<c106b1cf>] ? tick_program_event+0x1f/0x25
[  174.851400]  [<c1041e78>] ? hrtimer_interrupt+0x12e/0x1de
[  174.851402]  [<c10c7fdd>] ? SyS_ioctl+0x3e/0x61
[  174.851403]  [<c16a2eac>] ? sysenter_do_call+0x12/0x22
[  174.851404] ---[ end trace c7babcea469cea07 ]---

[  174.851413] WARNING: CPU: 0 PID: 3854 at drivers/gpu/drm/i915/intel_display.c:5029 intel_modeset_check_state+0x9c/0x52d [i915]()
[  174.851414] active connector not linked to encoder
[  174.851414] Modules linked in: dm_mod joydev snd_hda_codec_hdmi snd_hda_codec_realtek snd_hda_codec_generic iTCO_wdt iTCO_vendor_support ppdev dcdbas serio_raw pcspkr i2c_i801 snd_hda_intel snd_hda_controller snd_hda_codec snd_hwdep snd_pcm lpc_ich snd_timer mfd_core snd soundcore parport_pc parport tpm_tis tpm acpi_cpufreq i915 video button drm_kms_helper drm
[  174.851425] CPU: 0 PID: 3854 Comm: pm_rpm Tainted: G        W     3.15.0-rc8_kcloud_c63bb6_20140707+ #132
[  174.851426] Hardware name: Dell Inc. OptiPlex 990/0DXWW6, BIOS A02 02/26/2011
[  174.851427]  00000000 f24d7d80 c1699f5c f24d7d90 c102cfd4 f81deeea 00000009 f5a3bc00
[  174.851430]  f4d73800 f532b6c0 f24d7d98 c102d010 00000009 f24d7d90 f821c96a f24d7dac
[  174.851432]  f24d7ddc f81deeea f821a32a 000013a5 f821c96a c2800000 00000000 f4d73a00
[  174.851435] Call Trace:
[  174.851437]  [<c1699f5c>] ? dump_stack+0x3e/0x4e
[  174.851439]  [<c102cfd4>] ? warn_slowpath_common+0x64/0x7a
[  174.851446]  [<f81deeea>] ? intel_modeset_check_state+0x9c/0x52d [i915]
[  174.851448]  [<c102d010>] ? warn_slowpath_fmt+0x26/0x2a
[  174.851455]  [<f81deeea>] ? intel_modeset_check_state+0x9c/0x52d [i915]
[  174.851463]  [<f81df3e1>] ? intel_set_mode+0x21/0x2a [i915]
[  174.851471]  [<f81dfedb>] ? intel_crtc_set_config+0x6b4/0x934 [i915]
[  174.851473]  [<c1697480>] ? printk+0x17/0x1c
[  174.851477]  [<f8096826>] ? drm_mode_set_config_internal+0x39/0x8a [drm]
[  174.851481]  [<f809934d>] ? drm_mode_setcrtc+0x31b/0x3fe [drm]
[  174.851485]  [<f8099032>] ? drm_mode_setplane+0x13b/0x13b [drm]
[  174.851488]  [<f808ea98>] ? drm_ioctl+0x38f/0x40a [drm]
[  174.851492]  [<f8099032>] ? drm_mode_setplane+0x13b/0x13b [drm]
[  174.851494]  [<c10644c4>] ? ktime_get+0x58/0xc8
[  174.851497]  [<f808e709>] ? drm_copy_field+0x47/0x47 [drm]
[  174.851499]  [<c10c7eef>] ? do_vfs_ioctl+0x35f/0x40f
[  174.851501]  [<c106b1cf>] ? tick_program_event+0x1f/0x25
[  174.851502]  [<c1041e78>] ? hrtimer_interrupt+0x12e/0x1de
[  174.851504]  [<c10c7fdd>] ? SyS_ioctl+0x3e/0x61
[  174.851505]  [<c16a2eac>] ? sysenter_do_call+0x12/0x22
[  174.851507] ---[ end trace c7babcea469cea08 ]---

[  174.851515] WARNING: CPU: 0 PID: 3854 at drivers/gpu/drm/i915/intel_display.c:5031 intel_modeset_check_state+0xb9/0x52d [i915]()
[  174.851516] encoder->connectors_active not set
[  174.851516] Modules linked in: dm_mod joydev snd_hda_codec_hdmi snd_hda_codec_realtek snd_hda_codec_generic iTCO_wdt iTCO_vendor_support ppdev dcdbas serio_raw pcspkr i2c_i801 snd_hda_intel snd_hda_controller snd_hda_codec snd_hwdep snd_pcm lpc_ich snd_timer mfd_core snd soundcore parport_pc parport tpm_tis tpm acpi_cpufreq i915 video button drm_kms_helper drm
[  174.851527] CPU: 0 PID: 3854 Comm: pm_rpm Tainted: G        W     3.15.0-rc8_kcloud_c63bb6_20140707+ #132
[  174.851528] Hardware name: Dell Inc. OptiPlex 990/0DXWW6, BIOS A02 02/26/2011
[  174.851529]  00000000 f24d7d80 c1699f5c f24d7d90 c102cfd4 f81def07 00000009 f5a3bc00
[  174.851531]  f4d73800 f532b6c0 f24d7d98 c102d010 00000009 f24d7d90 f821c992 f24d7dac
[  174.851534]  f24d7ddc f81def07 f821a32a 000013a7 f821c992 c2800000 00000000 f4d73a00
[  174.851537] Call Trace:
[  174.851539]  [<c1699f5c>] ? dump_stack+0x3e/0x4e
[  174.851541]  [<c102cfd4>] ? warn_slowpath_common+0x64/0x7a
[  174.851548]  [<f81def07>] ? intel_modeset_check_state+0xb9/0x52d [i915]
[  174.851550]  [<c102d010>] ? warn_slowpath_fmt+0x26/0x2a
[  174.851557]  [<f81def07>] ? intel_modeset_check_state+0xb9/0x52d [i915]
[  174.851565]  [<f81df3e1>] ? intel_set_mode+0x21/0x2a [i915]
[  174.851572]  [<f81dfedb>] ? intel_crtc_set_config+0x6b4/0x934 [i915]
[  174.851574]  [<c1697480>] ? printk+0x17/0x1c
[  174.851579]  [<f8096826>] ? drm_mode_set_config_internal+0x39/0x8a [drm]
[  174.851582]  [<f809934d>] ? drm_mode_setcrtc+0x31b/0x3fe [drm]
[  174.851586]  [<f8099032>] ? drm_mode_setplane+0x13b/0x13b [drm]
[  174.851590]  [<f808ea98>] ? drm_ioctl+0x38f/0x40a [drm]
[  174.851593]  [<f8099032>] ? drm_mode_setplane+0x13b/0x13b [drm]
[  174.851595]  [<c10644c4>] ? ktime_get+0x58/0xc8
[  174.851598]  [<f808e709>] ? drm_copy_field+0x47/0x47 [drm]
[  174.851600]  [<c10c7eef>] ? do_vfs_ioctl+0x35f/0x40f
[  174.851602]  [<c106b1cf>] ? tick_program_event+0x1f/0x25
[  174.851603]  [<c1041e78>] ? hrtimer_interrupt+0x12e/0x1de
[  174.851605]  [<c10c7fdd>] ? SyS_ioctl+0x3e/0x61
[  174.851606]  [<c16a2eac>] ? sysenter_do_call+0x12/0x22
[  174.851608] ---[ end trace c7babcea469cea09 ]---

[  174.851616] WARNING: CPU: 0 PID: 3854 at drivers/gpu/drm/i915/intel_display.c:5034 intel_modeset_check_state+0xdc/0x52d [i915]()
[  174.851617] encoder not enabled
[  174.851617] Modules linked in: dm_mod joydev snd_hda_codec_hdmi snd_hda_codec_realtek snd_hda_codec_generic iTCO_wdt iTCO_vendor_support ppdev dcdbas serio_raw pcspkr i2c_i801 snd_hda_intel snd_hda_controller snd_hda_codec snd_hwdep snd_pcm lpc_ich snd_timer mfd_core snd soundcore parport_pc parport tpm_tis tpm acpi_cpufreq i915 video button drm_kms_helper drm
[  174.851628] CPU: 0 PID: 3854 Comm: pm_rpm Tainted: G        W     3.15.0-rc8_kcloud_c63bb6_20140707+ #132
[  174.851629] Hardware name: Dell Inc. OptiPlex 990/0DXWW6, BIOS A02 02/26/2011
[  174.851629]  00000000 f24d7d80 c1699f5c f24d7d90 c102cfd4 f81def2a 00000009 f5a3bc00
[  174.851632]  f4d73800 f532b6c0 f24d7d98 c102d010 00000009 f24d7d90 f821c9b6 f24d7dac
[  174.851635]  f24d7ddc f81def2a f821a32a 000013aa f821c9b6 c2800000 00000000 f4d73a00
[  174.851638] Call Trace:
[  174.851639]  [<c1699f5c>] ? dump_stack+0x3e/0x4e
[  174.851641]  [<c102cfd4>] ? warn_slowpath_common+0x64/0x7a
[  174.851649]  [<f81def2a>] ? intel_modeset_check_state+0xdc/0x52d [i915]
[  174.851656]  [<c102d010>] ? warn_slowpath_fmt+0x26/0x2a
[  174.851664]  [<f81def2a>] ? intel_modeset_check_state+0xdc/0x52d [i915]
[  174.851671]  [<f81df3e1>] ? intel_set_mode+0x21/0x2a [i915]
[  174.851679]  [<f81dfedb>] ? intel_crtc_set_config+0x6b4/0x934 [i915]
[  174.851681]  [<c1697480>] ? printk+0x17/0x1c
[  174.851685]  [<f8096826>] ? drm_mode_set_config_internal+0x39/0x8a [drm]
[  174.851696]  [<f809934d>] ? drm_mode_setcrtc+0x31b/0x3fe [drm]
[  174.851704]  [<f8099032>] ? drm_mode_setplane+0x13b/0x13b [drm]
[  174.851712]  [<f808ea98>] ? drm_ioctl+0x38f/0x40a [drm]
[  174.851720]  [<f8099032>] ? drm_mode_setplane+0x13b/0x13b [drm]
[  174.851727]  [<c10644c4>] ? ktime_get+0x58/0xc8
[  174.851736]  [<f808e709>] ? drm_copy_field+0x47/0x47 [drm]
[  174.851742]  [<c10c7eef>] ? do_vfs_ioctl+0x35f/0x40f
[  174.851748]  [<c106b1cf>] ? tick_program_event+0x1f/0x25
[  174.851755]  [<c1041e78>] ? hrtimer_interrupt+0x12e/0x1de
[  174.851761]  [<c10c7fdd>] ? SyS_ioctl+0x3e/0x61
[  174.851767]  [<c16a2eac>] ? sysenter_do_call+0x12/0x22
[  174.851771] ---[ end trace c7babcea469cea0a ]---

[  174.851779] WARNING: CPU: 0 PID: 3854 at drivers/gpu/drm/i915/intel_display.c:5035 intel_modeset_check_state+0xf5/0x52d [i915]()
[  174.851780] Modules linked in: dm_mod joydev snd_hda_codec_hdmi snd_hda_codec_realtek snd_hda_codec_generic iTCO_wdt iTCO_vendor_support ppdev dcdbas serio_raw pcspkr i2c_i801 snd_hda_intel snd_hda_controller snd_hda_codec snd_hwdep snd_pcm lpc_ich snd_timer mfd_core snd soundcore parport_pc parport tpm_tis tpm acpi_cpufreq i915 video button drm_kms_helper drm
[  174.851796] CPU: 0 PID: 3854 Comm: pm_rpm Tainted: G        W     3.15.0-rc8_kcloud_c63bb6_20140707+ #132
[  174.851797] Hardware name: Dell Inc. OptiPlex 990/0DXWW6, BIOS A02 02/26/2011
[  174.851798]  00000000 f24d7d94 c1699f5c 00000000 c102cfd4 f81def43 00000009 f5a3bc00
[  174.851802]  f4d73800 00000000 f24d7da4 c102d04e 00000009 00000000 f24d7ddc f81def43
[  174.851807]  c2800000 00000000 f4d73a00 00000000 f4d739cc 00000000 00000000 f5a78000
[  174.851811] Call Trace:
[  174.851814]  [<c1699f5c>] ? dump_stack+0x3e/0x4e
[  174.851817]  [<c102cfd4>] ? warn_slowpath_common+0x64/0x7a
[  174.851829]  [<f81def43>] ? intel_modeset_check_state+0xf5/0x52d [i915]
[  174.851832]  [<c102d04e>] ? warn_slowpath_null+0xf/0x13
[  174.851844]  [<f81def43>] ? intel_modeset_check_state+0xf5/0x52d [i915]
[  174.851857]  [<f81df3e1>] ? intel_set_mode+0x21/0x2a [i915]
[  174.851869]  [<f81dfedb>] ? intel_crtc_set_config+0x6b4/0x934 [i915]
[  174.851873]  [<c1697480>] ? printk+0x17/0x1c
[  174.851880]  [<f8096826>] ? drm_mode_set_config_internal+0x39/0x8a [drm]
[  174.851886]  [<f809934d>] ? drm_mode_setcrtc+0x31b/0x3fe [drm]
[  174.851893]  [<f8099032>] ? drm_mode_setplane+0x13b/0x13b [drm]
[  174.851898]  [<f808ea98>] ? drm_ioctl+0x38f/0x40a [drm]
[  174.851904]  [<f8099032>] ? drm_mode_setplane+0x13b/0x13b [drm]
[  174.851907]  [<c10644c4>] ? ktime_get+0x58/0xc8
[  174.851913]  [<f808e709>] ? drm_copy_field+0x47/0x47 [drm]
[  174.851916]  [<c10c7eef>] ? do_vfs_ioctl+0x35f/0x40f
[  174.851918]  [<c106b1cf>] ? tick_program_event+0x1f/0x25
[  174.851920]  [<c1041e78>] ? hrtimer_interrupt+0x12e/0x1de
[  174.851923]  [<c10c7fdd>] ? SyS_ioctl+0x3e/0x61
[  174.851926]  [<c16a2eac>] ? sysenter_do_call+0x12/0x22
[  174.851927] ---[ end trace c7babcea469cea0b ]---
Comment 9 Paulo Zanoni 2014-07-08 14:17:50 UTC
Right, I didn't test the VGA output, only LVDS.
Comment 10 Paulo Zanoni 2014-07-09 20:12:22 UTC
Created attachment 102498 [details] [review]
Correct patch

This is the correct squash of the commits on the mailing list. My system works fine with it.
Comment 11 Paulo Zanoni 2014-07-11 12:40:01 UTC
The patches that solve this on my machine were all merged already.

The drm-intel-nightly tree should be fixed. Can you please verify?
Comment 12 Guo Jinxian 2014-07-15 08:04:26 UTC
(In reply to comment #11)
> The patches that solve this on my machine were all merged already.
> 
> The drm-intel-nightly tree should be fixed. Can you please verify?

I tried in latest -nightly(2a38e1bcd4dc9523cd723291340226d139bece1b) 10 times, and didn't find this issue.
Comment 13 Paulo Zanoni 2014-07-15 13:02:36 UTC
(In reply to comment #12)
> (In reply to comment #11)
> > The patches that solve this on my machine were all merged already.
> > 
> > The drm-intel-nightly tree should be fixed. Can you please verify?
> 
> I tried in latest -nightly(2a38e1bcd4dc9523cd723291340226d139bece1b) 10
> times, and didn't find this issue.

Thanks for testing! Closing bug then.
Comment 14 Elizabeth 2017-10-06 14:37:38 UTC
Closing old verified.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.